--- a/_entries/02-04 api.md
+++ b/_entries/02-04 api.md
@@ -23,6 +23,8 @@ To be able to setup CI/CD webhooks, you'll need to fork the application into you
 
 {% collapsible %}
 
+We'll now deploy the `rating-api` app. **Don't miss the entry in the following command where we need you to add your GitHub username**.
+
 ```sh
 oc new-app https://github.com/<your GitHub username>/rating-api --strategy=source
 ```
@@ -35,16 +37,24 @@ oc new-app https://github.com/<your GitHub username>/rating-api --strategy=sourc
 
 {% collapsible %}
 
-Create the `MONGODB_URI` environment variable. This URI should look like `mongodb://[username]:[password]@[endpoint]:27017/ratingsdb`. You'll need to replace the `[usernaame]` and `[password]` with the ones you used when creating the database. You'll also need to replace the `[endpoint]` with the hostname acquired in the previous step
+First we'll need to get to the correct screen. Ensure you're in the **Administrator** view, then navigate to **Workloads -> Deployments**, selecting **rating-api**, and move to the **Environment** tab.
+
+![Navigate to create MONGODB_URI environment variable](media/rating-api-envvars-navigate.png)
+
+We can now create the environment variable using the NAME `MONGODB_URI`. The VALUE should look like `mongodb://[username]:[password]@[endpoint]:27017/ratingsdb`. You'll need to replace the `[username]` and `[password]` with the ones you used when creating the database. You'll also need to replace the `[endpoint]` with the hostname acquired in the previous step.
+
+> **Note** Don't miss replacing your student number in the following VALUE entry. 
+
+The VALUE should look something like this: **mongodb://ratingsuser:ratingspassword@mongodb.workshop<student#>.svc.cluster.local:27017/ratingsdb**
 
 Hit **Save** when done.
 
 ![Create a MONGODB_URI environment variable](media/rating-api-envvars.png)
 
-It can also be done with CLI
+It can also be done with an OC command.
 
 ```
-oc set env dc/rating-api MONGODB_URI=mongodb://ratingsuser:ratingspassword@mongodb.workshop.svc.cluster.local:27017/ratingsdb
+oc set env deploy/rating-api MONGODB_URI=mongodb://ratingsuser:ratingspassword@mongodb.workshop<student#>.svc.cluster.local:27017/ratingsdb
 ```
 
 {% endcollapsible %}
@@ -53,8 +63,11 @@ oc set env dc/rating-api MONGODB_URI=mongodb://ratingsuser:ratingspassword@mongo
 
 {% collapsible %}
 
-If you navigate to the logs of the `rating-api` deployment, you should see a log message confirming the code can successfully connect to the mongoDB.
-For that, in the deployment's details screen, click on *Pods* tab, then on one of the pods
+You can navigate to the logs of the `rating-api` deployment by going **Workloads -> Pods** and selecting the  **rating-api** pod that is currently **running**, 
+
+![Navigate to verify mongoDB connection](media/rating-api-navigate.png)
+
+If you move to the **Logs** tab, you should see a log message confirming the code can successfully connect to the MongoDB.
 
 ![Verify mongoDB connection](media/rating-api-working.png)
 
@@ -70,17 +83,21 @@ Find the `rating-api` service.
 oc get svc rating-api
 ```
 
-The service will be accessible at the following DNS name over port 8080: `rating-api.workshop.svc.cluster.local:8080` which is formed of `[service name].[project name].svc.cluster.local`. This resolves only within the cluster.
+Once you replace your student name in the following, the service will be accessible at this DNS name over port 8080: `rating-api.workshop<student#>.svc.cluster.local:8080` which is formed of `[service name].[project name].svc.cluster.local`. This resolves only within the cluster.
 
 {% endcollapsible %}
 
 ### Setup GitHub webhook
 
-To trigger S2I builds when you push code into your GitHib repo, you'll need to setup the GitHub webhook.
+To trigger S2I builds when you push code into your GitHub repo, you'll need to setup the GitHub webhook.
 
 {% collapsible %}
 
-Retrieve the GitHub webhook trigger secret. You'll need use this secret in the GitHub webhook URL.
+The easiest way to access the URL needed to create the webhook in GitHub is through the web console. If you navigate to **Builds -> Build Configs** and selecting **rating-api**, you will see the copy option for the GitHub webhook URL near the bottom of the page. You’ll use this copied URL to setup the webhook on your GitHub repository.
+
+![Rating API GitHub webhook URL](media/rating-api-github-webhook-url-console.png)
+
+If you prefer to use the command line, start by retrieving the GitHub webhook trigger secret. This is incldued if you copy from the web console, but you'll need to gather it separately for use the GitHub webhook URL if you use the command line.
 
 ```sh
 oc get bc/rating-api -o=jsonpath='{.spec.triggers..github.secret}'
@@ -98,11 +115,13 @@ oc describe bc/rating-api
 
 ![Rating API GitHub trigger url](media/rating-api-github-webhook-url.png)
 
-Replace the `<secret>` placeholder with the secret you retrieved in the previous step to have a URL similar to `https://openshift.9729df58f18c47bab789.eastus.azmosa.io:443/apis/build.openshift.io/v1/namespaces/workshop/buildconfigs/rating-api/webhooks/1inS0TVIN-Zw92xxtIXr/github`. You'll use this URL to setup the webhook on your GitHub repository.
+Replace the `<secret>` placeholder with the secret you retrieved in the previous step to have a URL similar to `https://api.qv4g35sq.westeurope.aroapp.io:6443/apis/build.openshift.io/v1/namespaces/workshop01/buildconfigs/rating-api/webhooks/zLKX0A_0CQs6qWNwQqpV/github`. You'll use this URL to setup the webhook on your GitHub repository.
 
-In your GitHub repository, select **Add Webhook** from **Settings** → **Webhooks**.
+In your GitHub repository (e.g. https://github.com/<your GitHub username>/rating-api), navigate to **Settings -> Webhooks** and select **Add Webhook**.
 
-Paste the URL output (similar to above) into the Payload URL field.
+![Rating API GitHub webhook navigation](media/rating-api-github-webhook-navigation.png)
+
+Paste the URL output (similar to above) into the **Payload URL** field.
 
 Change the Content Type from GitHub’s default **application/x-www-form-urlencoded** to **application/json**.
 
@@ -110,9 +129,11 @@ Click **Add webhook**.
 
 ![GitHub add webhook](media/rating-api-github-addwebhook.png)
 
-You should see a message from GitHub stating that your webhook was successfully configured.
+If you click back into the newly created webhook, you should see a message from at the bottom with a green tick under **Recent Deliveries**.
 
-Now, whenever you push a change to your GitHub repository, a new build will automatically start, and upon a successful build a new deployment will start.
+![GitHub webhook success](media/rating-api-webhook-success.png)
+
+Now whenever you push a change to your GitHub repository a new build will automatically start in OpenShift. After a successful build, a new deployment will be triggered as well.
 
 {% endcollapsible %}
 
