--- a/_entries/02-05 web.md
+++ b/_entries/02-05 web.md
@@ -23,6 +23,8 @@ To be able to setup CI/CD webhooks, you'll need to fork the application into you
 
 {% collapsible %}
 
+We'll now deploy the `rating-web` app. **Don't miss the entry in the following command where we need you to add your GitHub username**.
+
 ```sh
 oc new-app https://github.com/<your GitHub username>/rating-web --strategy=source
 ```
@@ -35,13 +37,12 @@ oc new-app https://github.com/<your GitHub username>/rating-web --strategy=sourc
 
 {% collapsible %}
 
-Create the `API` environment variable for `rating-web` Deployment Config. The value of this variable is going to be the hostname/port of the `rating-api` service.
+Create the `API` environment variable for `rating-web` Deployment. The value of this variable is going to be the hostname/port of the `rating-api` service.
 
-Instead of setting the environment variable through the Azure Red Hat OpenShift Web Console, you can set it through the OpenShift CLI.
+Instead of setting the environment variable through the web console, we'll set it through the OpenShift CLI.
 
 ```sh
-oc set env dc rating-web API=http://rating-api:8080
-
+oc set env deploy/rating-web API=http://rating-api:8080
 ```
 
 {% endcollapsible %}
@@ -86,7 +87,9 @@ To trigger S2I builds when you push code into your GitHib repo, you'll need to s
 
 {% collapsible %}
 
-Retrieve the GitHub webhook trigger secret. You'll need use this secret in the GitHub webhook URL.
+As before, the fastest way in through the web console navigating to **Builds -> Build Configs** and selecting **rating-web**, then using the copy option for the GitHub webhook URL near the bottom of the page. You’ll once again use this copied URL to setup the webhook on your GitHub repository.
+
+The process at the command line is also the same as before. Retrieve the GitHub webhook trigger secret you'll need need in the GitHub webhook URL using the command below:
 
 ```sh
 oc get bc/rating-web -o=jsonpath='{.spec.triggers..github.secret}'
@@ -104,9 +107,9 @@ oc describe bc/rating-web
 
 ![Rating Web GitHub trigger url](media/rating-web-github-webhook-url.png)
 
-Replace the `<secret>` placeholder with the secret you retrieved in the previous step to have a URL similar to `https://openshift.9729df58f18c47bab789.eastus.azmosa.io:443/apis/build.openshift.io/v1/namespaces/workshop/buildconfigs/rating-web/webhooks/Dk5iK-HU8u6Ik1dFRKd4/github`. You'll use this URL to setup the webhook on your GitHub repository.
+Replace the `<secret>` placeholder with the secret you retrieved in the previous step to have a URL similar to `https://api.qv4g35sq.westeurope.aroapp.io:6443/apis/build.openshift.io/v1/namespaces/workshop01/buildconfigs/rating-web/webhooks/VZJewR0m1E65dBAv1IYM/github`. You'll use this URL to setup the webhook on your GitHub repository.
 
-In your GitHub repository, select **Add Webhook** from **Settings** → **Webhooks**.
+In your GitHub repository (e.g. https://github.com/<your GitHub username>/rating-web), navigate to **Settings -> Webhooks** and select **Add Webhook**.
 
 Paste the URL output (similar to above) into the Payload URL field.
 
@@ -116,9 +119,9 @@ Click **Add webhook**.
 
 ![GitHub add webhook](media/rating-web-github-addwebhook.png)
 
-You should see a message from GitHub stating that your webhook was successfully configured.
+If you click back into the newly created webhook, you should see a message from at the bottom with a green tick under **Recent Deliveries**.
 
-Now, whenever you push a change to your GitHub repository, a new build will automatically start, and upon a successful build a new deployment will start.
+Now whenever you push a change to your GitHub repository a new build will automatically start in OpenShift. After a successful build, a new deployment will be triggered as well.
 
 {% endcollapsible %}
 
@@ -134,7 +137,7 @@ Commit the changes to the file into the `master` branch.
 
 ![GitHub edit app](media/rating-web-editcolor.png)
 
-Immediately, go to the **Builds** tab in the OpenShift Web Console. You'll see a new build queued up which was triggered by the push. Once this is done, it will trigger a new deployment and you should see the new website color updated.
+Immediately head to the **Builds** screen in the web console. You'll see a new build queued up which was triggered by the push. Once this is done, it will trigger a new deployment that you can track in the **Workloads -> Deployments** screen. Once this completes by creating a new pod, you should see the new website color updated.
 
 ![Webhook build](media/rating-web-cicd-build.png)
 
