--- a/_entries/02-05 web.md
+++ b/_entries/02-05 web.md
@@ -7,7 +7,7 @@ parent-id: lab-ratingapp
 
 The `rating-web` is a NodeJS application that connects to the `rating-api`. Below are some of the details that you'll need to deploy this.
 
-- `rating-web` on GitHub: <https://github.com/adriangigante/rating-web.git>
+- `rating-web` on GitHub: <https://github.com/adriangigante/rating-web>
 - The container exposes port 8080
 - The web app connects to the API over the internal cluster DNS, using a proxy through an environment variable named `API`
 
@@ -15,7 +15,7 @@ The `rating-web` is a NodeJS application that connects to the `rating-api`. Belo
 
 To be able to setup CI/CD webhooks, you'll need to fork the application into your personal GitHub repository.
 
-<a class="github-button" href="https://github.com/adriangigante/rating-web.git" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork microsoft/rating-web on GitHub">Fork</a>
+<a class="github-button" href="https://github.com/adriangigante/rating-web/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork adriangigante/rating-web on GitHub">Fork</a>
 
 ### Use the OpenShift CLI to deploy the `rating-web`
 
