--- a/_entries/02-05 web.md
+++ b/_entries/02-05 web.md
@@ -89,6 +89,8 @@ To trigger S2I builds when you push code into your GitHib repo, you'll need to s
 
 As before, the fastest way in through the web console navigating to **Builds -> Build Configs** and selecting **rating-web**, then using the copy option for the GitHub webhook URL near the bottom of the page. You’ll once again use this copied URL to setup the webhook on your GitHub repository.
 
+![Rating Web GitHub webhook URL](media/rating-web-github-webhook-url-console.png)
+
 The process at the command line is also the same as before. Retrieve the GitHub webhook trigger secret you'll need need in the GitHub webhook URL using the command below:
 
 ```sh
